@@ -45,10 +45,10 @@ BSON_BEGIN_DECLS
 
 typedef struct _mongoc_auto_encryption_opts_t mongoc_auto_encryption_opts_t;
 
-typedef bool (*mongoc_kms_credentials_provider_callback_fn) (void *userdata,
-                                                             const bson_t *params,
-                                                             bson_t *out,
-                                                             bson_error_t *error);
+typedef bool (BSON_CALL *mongoc_kms_credentials_provider_callback_fn) (void *userdata,
+                                                                       const bson_t *params,
+                                                                       bson_t *out,
+                                                                       bson_error_t *error);
 
 MONGOC_EXPORT (mongoc_auto_encryption_opts_t *)
 mongoc_auto_encryption_opts_new (void) BSON_GNUC_WARN_UNUSED_RESULT;
